[package]
name = "rust_dbsm_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oracle = "0.6.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"git checkout -b main